# github-mirror

./: .clang-format  .gitignore  CMakeLists.txt
.github/workflows/: cmake.yml  release.yml
hack/: graphql_to_header.py
man/: github-mirror.conf.5  github_mirror.1  github_mirror.conf.5
queries/: list_repos.graphql
queries/github/: gh_list_repos.graphql
queries/srht/: srht_list_repos.graphql
src/: alloc.h  buffer.c  buffer.h  client.c  client.h  config.c  config.h  git.c  git.h  github.c  github.h  github_types.c  github_types.h  main.c  precheck.c  precheck.h
src/github/: client.c  client.h  types.c  types.h
src/srht/: client.c  client.h  types.c  types.h
tests/: test_buffer.c  test_config.c
tests/fixtures/: normal.ini  srht.ini
